--- a/总结/回溯算法.md
+++ b/总结/回溯算法.md
@@ -1,15 +1,16 @@
 # 回溯算法
 
-​		回溯法是一种暴力（枚举）搜索算法，主要是在搜索尝试过程中寻找问题的解，当发现已**不满足求解条件**时，就**“回溯”**返回，尝试别的路径。回溯算法的基本思想是：从一条路往前走，能进则进，不能进则退回来，换一条路再试。
+回溯法是一种暴力（枚举）搜索算法，主要是在搜索尝试过程中寻找问题的解，当发现已**不满足求解条件**时，就**“回溯”**返回，尝试别的路径。回溯算法的基本思想是：从一条路往前走，能进则进，不能进则退回来，换一条路再试。
 
 + 枚举所有的可行解， 枚举寻找可行解的过程一般用递归实现
+
 + 到达某一步发现不能获得可行解，则回退至上一步
 
 ## 排列枚举问题
 
 ### [N皇后](https://leetcode-cn.com/problems/n-queens/)
 
-​		由于每一排只能放置一个皇后，则每排皇后的列号组成一个 1 到 n 的排列。该问题则转化为一个排列枚举问题， 时间复杂度为 $ O(n!)$。
+由于每一排只能放置一个皇后，则每排皇后的列号组成一个 1 到 n 的排列。该问题则转化为一个排列枚举问题， 时间复杂度为 $ O(n!)$。
 
 + 枚举所有可行解：对于 queen[i] （皇后 i 的列号）的取值， 从 1 到 n 枚举；同时需要满足解的条件：与其他的皇后不在同一列；与其他皇后不在同一对角线上（利用set,记录出现过的列和对角线）
 
@@ -50,11 +51,11 @@ void backtrack(vector<int>& queens, int n, int row){
 
 ### [电话号码的字母组合](https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/)
 
-​		每个数字对应多个字母，枚举字母的**排列组合**情况即可。
+每个数字对应多个字母，枚举字母的**排列组合**情况即可。
 
 ### [括号生成](https://leetcode-cn.com/problems/generate-parentheses/)
 
-​		枚举所有解的情况，即左括号和又括号的全排列。同时加入限制条件，当前搜索路径的左括号数量大于等于右括号的数量。
+枚举所有解的情况，即左括号和又括号的全排列。同时加入限制条件，当前搜索路径的左括号数量大于等于右括号的数量。
 
 ``` c++
     void backtrack(string& temp, int l, int r, int& n){
@@ -81,11 +82,11 @@ void backtrack(vector<int>& queens, int n, int row){
 
 ## 可行解问题
 
-​		对于这类寻找所有可行解的题，我们都可以尝试用「搜索回溯」的方法来解决。
+对于这类寻找所有可行解的题，我们都可以尝试用「搜索回溯」的方法来解决。
 
 ### [组合总和](https://leetcode-cn.com/problems/combination-sum/)
 
-​		定义递归函数 backtrack(sum, pos)，其中 sum为当前路径的节点总和，pos 表示该节点在待选序列中的位置。
+定义递归函数 backtrack(sum, pos)，其中 sum为当前路径的节点总和，pos 表示该节点在待选序列中的位置。
 
 ``` c++
 	void backtrack(vector<int>& candidates, int& target, vector<vector<int>>& ans, vector<int>& temp, int sum, int pos){
@@ -109,10 +110,47 @@ void backtrack(vector<int>& queens, int n, int row){
 
 ### [组合总和 II](https://leetcode-cn.com/problems/combination-sum-ii/)
 
-​		相比于[组合总和](https://leetcode-cn.com/problems/combination-sum/)，该题数组中的元素有重复，且每个元素只能使用一次，需要解决重复解的问题。对应搜索树中的剪枝操作。
+相比于[组合总和](https://leetcode-cn.com/problems/combination-sum/)，该题数组中的元素有重复，且每个元素只能使用一次，需要解决重复解的问题。对应搜索树中的剪枝操作。对于重复解的问题，首先将元素排序便于后续处理；利用 freq 记录**不同元素出现的频次**；通过枚举各个元素出现的次数，解决重复解的问题。
 
-​		
-
-
+``` c++
+class Solution {
+public:
+    vector<vector<int>> combinationSum2(vector<int>& candidates, int target) {
+        vector<vector<int>> ans;
+        vector<int> temp;
+        vector<pair<int, int>> freq;
+        sort(candidates.begin(), candidates.end());
+        for(auto num : candidates){
+            if(freq.empty() || freq.back().first != num){
+                freq.emplace_back(num, 1);
+            }else{
+                freq.back().second++;
+            }
+        }
+        dfs(candidates, target, 0, ans, temp, freq);
+        return ans;
+    }
+    void dfs(vector<int>& candidates, int rest, int pos, vector<vector<int>>& ans, vector<int>& temp, vector<pair<int, int>>& freq){
+        if(rest == 0){
+            ans.emplace_back(temp);
+            return;
+        }
+        if(pos == freq.size() || rest < freq[pos].first){
+            return;
+        }
+        // 直接跳过
+        dfs(candidates, rest, pos + 1, ans, temp, freq);
+        // 选择当前数
+        int most = min(rest / freq[pos].first, freq[pos].second);
+        for(int i = 1; i <= most; i++){
+            temp.push_back(freq[pos].first);
+            dfs(candidates, rest - i * freq[pos].first, pos + 1, ans, temp, freq);
+        }
+        for(int i = 1; i <= most; ++i){
+            temp.pop_back();
+        }
+    }
+};
+```
 
 ​		
